...
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#1A1A1B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Username_LS_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/logintextstyle"
            android:backgroundTint="#819C27B0"
            android:fontFamily="casual"
...
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Password_LS_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/logintextstyle"
            android:backgroundTint="#859C27B0"
...
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyleselector"
            android:fontFamily="casual"
            android:text="Login"
...
