...
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#8BC34A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/happyButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
...
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#241F1F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tiredButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
...
